--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <script src = "/js/navbar.js"></script>
     </nav>
     
-    <section class="Landing_Page">
+    <section class="Landing_Page" style="background: linear-gradient(0deg, rgba(0, 0, 0, 0.59), rgba(0, 0, 0, 0.59)), url('nhatrangImg/nha-trang-inside.jfif') center/cover no-repeat;">
         <div class="Landing_Page_Content">
             <img class="main_logo" src="nhatrangImg/NhaTrangOneLogo.svg" alt="NhaTrangOneLogo">
             <h1>Vietnamese Food From Our <br>Family To Yours</h1>
