--- a/menu.html
+++ b/menu.html
@@ -52,7 +52,12 @@
         <img class = "img-slide" src = "nhatrangImg/tomrammoi.JPG" alt = "TOM RAM MOUI">
         <img class = "img-slide" src = "nhatrangImg/XNG.jpg" alt = "SUON NUONG">
         <div class = "carousel-nav">
-                <div class = 'carousel-indicator'></div>
+                <div class = 'carousel-indicator active' id = "0"></div>
+                <div class = 'carousel-indicator' id = "1"></div>
+                <div class = 'carousel-indicator' id = "2"></div>
+                <div class = 'carousel-indicator' id = "3"></div>
+                <div class = 'carousel-indicator' id = "4"></div>
+                <div class = 'carousel-indicator' id = "5"></div>
         </div>
     </section>
     <div class = "menu-nav">
