Change of Buffer Parallax and Glass Effect

--- a/index.html
+++ b/index.html
@@ -46,8 +46,10 @@
         </div>
     </section>
 
-    <div class = "buffer about-parallax">
-        <h1>POPULAR DISHES & DRINKS</h1>
+    <div class = "buffer food-parallax">
+        <div class = "buffer food-parallax-overlay">
+            <h1>POPULAR DISHES & DRINKS</h1>
+        </div>
     </div>
 
     <section class="Popular_Dishes">
@@ -112,7 +114,9 @@
     </section>
 
     <div class = "buffer insta-parallax">
-        <h1>Instagram</h1>
+        <div class = "buffer insta-parallax-overlay">
+            <h1>Instagram</h1>
+        </div>
     </div>
 
     <section class="Instagram">
