--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <script src = "/js/navbar.js"></script>
     </nav>
     
-    <section class="Landing_Page">
+    <section class="Landing_Page main-content">
         <div class="Landing_Page_Content">
             <img class="main_logo" src="nhatrangImg/NhaTrangOneLogo.svg" alt="NhaTrangOneLogo">
             <h1>Vietnamese Food From Our <br>Family To Yours</h1>
