--- a/index.html
+++ b/index.html
@@ -140,11 +140,11 @@
         </div>
     </section>
 
-    <div class = "buffer menu-parallax">
+    <div class = "buffer menu-parallax" id = "Location">
         <h1>HOURS & LOCATION</h1>
     </div>
 
-    <section class="Location" id = "Location">
+    <section class="Location">
         <div class="description">
 
             <svg width="255" height="25" viewBox="0 0 255 25" fill="none" xmlns="http://www.w3.org/2000/svg">
