--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </div>
     </section>
 
-    <div class = "buffer food-parallax">
+    <div class = "buffer food-parallax" style="border-top: 60px solid var(--darkBlue);">
         <div class = "buffer food-parallax-overlay">
             <h1>POPULAR DISHES & DRINKS</h1>
         </div>
