--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
         
         <script>
             // Adding my map from mapbox with access token and map style
-            mapboxgl.accessToken = 'Insert Here'; 
+            mapboxgl.accessToken = ''; 
             const map = new mapboxgl.Map({
               container: 'map',
               style: 'mapbox://styles/andrewdai6123/clg2xlsap002f01mqrt7vrgqt', 
