--- a/faq.html
+++ b/faq.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&family=Roboto+Condensed:wght@300;400;700&family=Roboto+Slab:wght@100;200;300;400;500;600;700;800;900&family=Roboto:wght@100;300;400;500;700;900&family=Rubik:wght@300;400;500;600;700;800;900&family=Squada+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
-    <title>FAQ</title>
+    <title>FAQ | Nha Trang One</title>
 </head>
 <body class = "faq-parallax">
     <nav>
@@ -44,7 +44,7 @@
         <h1>FAQ</h1>
         <div class = "faq-item">
             <div class = "faq-dropdown">
-                <div clas  = "question">
+                <div class  = "question">
                 Do you have vegetable broth?
                 </div>
                 <div class = "carrot"></div>
