added footer, responsiveness, yea

--- a/ourstory.html
+++ b/ourstory.html
@@ -53,4 +53,37 @@
         </div>
         <img src = "nhatrangImg/coldandypicture.png" alt = "Owner: Andy Ha">
     </div>
+    <footer>
+        <div class="logo">
+            <img class="Layer_3" src="nhatrangimg/nha-trang-one-logo.svg" alt="nha-trang-one-logo">
+            <h1 class="NHA_TRANG_ONE" style="color: white;">NHA TRANG ONE</h1>
+        </div>
+        <div class = "footer-divider"></div>
+        <div class = "footer-bottom">
+            <div class = "footer-section">
+                <h3>Contact Us</h3>
+                <p>87 Baxter Street </p> 
+                <p>New York, NY 10013</p>
+                <p>(212)-233-5948</p>
+            </div>
+            <div class = "footer-bar"></div>
+            <div class = "footer-section">
+                <h3>Opening Hours</h3>
+                <p>Tuesday - Sunday</p>
+                <p>11am - 8:30pm</p>
+            </div>
+            <div class = "footer-bar"></div>
+            <div class = "footer-section">
+                <h3>Social Media</h3>
+                <div class = "footer-social">
+                    <p>Instagram</p>
+                    <img src = "nhatrangImg/instagram icon.svg">
+                </div>
+                <div class = "footer-social">
+                    <p>Yelp</p>
+                    <img src = "nhatrangImg/yelp icon.svg">
+                </div>
+            </div>
+        </div>
+    </footer>
 </body> 
