--- a/menu.html
+++ b/menu.html
@@ -546,14 +546,18 @@
                     <div class = "footer-bar"></div>
                     <div class = "footer-section">
                         <h3>Social Media</h3>
+                        <a target = "_blank" href = "https://www.instagram.com/nhatrangnyc/?hl=en">
                         <div class = "footer-social">
-                            <p>Instagram</p>
-                            <img src = "nhatrangImg/instagram icon.svg">
-                        </div>
-                        <div class = "footer-social">
-                            <p>Yelp</p>
-                            <img src = "nhatrangImg/yelp icon.svg">
-                        </div>
+                                <p>Instagram</p>
+                                <img src = "nhatrangImg/instagram icon.svg">
+                            </div>
+                        </a>
+                        <a target = "_blank" href = "https://www.yelp.com/biz/nha-trang-one-new-york?osq=nha+trang+one">
+                            <div class = "footer-social">
+                                <p>Yelp</p>
+                                <img src = "nhatrangImg/yelp icon.svg">
+                            </div>
+                        </a>
                     </div>
                 </div>
             </footer>
