--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
         
         <script>
             // Adding my map from mapbox with access token and map style
-            mapboxgl.accessToken = 'pk.eyJ1IjoiYW5kcmV3ZGFpNjEyMyIsImEiOiJjbGcyenV3aDIwYXM1M2twbDUxd2tweWZwIn0.l3e_ddn_pjNLLkWt3sdUnQ'; 
+            mapboxgl.accessToken = ''; 
             const map = new mapboxgl.Map({
               container: 'map',
               style: 'mapbox://styles/andrewdai6123/clg2xlsap002f01mqrt7vrgqt', 
