fixed parallax and landscape isuses

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
             </div>
         </section>
 
-    <div class = "buffer menu-parallax" id = "Location">
+    <div class = "buffer location-parallax" id = "Location">
         <h1>HOURS & LOCATION</h1>
     </div>
 
