--- a/menu.html
+++ b/menu.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="styles.css">
     <title>Menu | Nha Trang One</title>
 </head>
-<body class = "menu-parallax">
+<body style="background: linear-gradient(to bottom right, black, #333333)">
     <nav>
         <div class = 'drop'>
             <div class="logo">
