--- a/faq.html
+++ b/faq.html
@@ -35,8 +35,8 @@
         </ul>
         <script src = "/js/navbar.js"></script>
     </nav>
-    <section class="Landing_Page">
-        <div class="Landing_Page_Content">
+    <section class="Landing_Page main-content">
+        <div class="Landing_Page_Content faq-parallax">
             <h2>FAQ</h2>
         </div>
     </section>
