--- a/ourstory.html
+++ b/ourstory.html
@@ -33,8 +33,8 @@
         </ul>
         <script src = "/js/navbar.js"></script>
     </nav>
-    <section class="Landing_Page">
-        <div class="Landing_Page_Content">
+    <section class="Landing_Page main-content">
+        <div class="Landing_Page_Content about-parallax">
             <h2>Our Story</h2>
         </div>
     </section>
